# external

./: .global-cache  BLUE_BUILD.gn.hbs  Cargo.toml  gnrt_config.toml
.github/workflows/: ci.yml
CMSIS-RTOS2_Validation/Include/: cmsis_rv2.h
CMSIS-RTOS2_Validation/Layer/App/Validation_FreeRTOS/RTE/RTOS/: FreeRTOSConfig.h
CMSIS-RTOS2_Validation/Layer/App/Validation_RTX5/RTE/CMSIS/: RTX_Config.h
CMSIS-RTOS2_Validation/Source/: RV2_GenWait.c  RV2_Thread.c  cmsis_rv2.c  tf_report.c
CMSIS-RTOS2_Validation/Source/Config/: RV2_Config.c  RV2_Config.h  RV2_Config_Device.h
gnrt/: BUILD.gn  Cargo.toml  add.rs  gen.rs  run_gnrt_build.py  run_gnrt_gen.py  update.rs  util.rs  vendor.rs
gnrt/PaxHeaders.X/: .gitignore  Cargo.toml  add.rs  gen.rs  lib_  lib_crates.rs  lib_deps.rs  lib_gn.rs  lib_group.rs  lib_metadata_util.rs  lib_platforms.rs  lib_readme.rs  lib_test_metadata.json  lib_vet.rs  main.rs  sample_package_Cargo.toml  sample_package_foo_Cargo.toml  sample_package_src_  vendor.rs
gnrt/lib/: config.rs  crates.rs  deps.rs  gn.rs  group.rs  inherit.rs  manifest.rs  metadata_util.rs  paths.rs  platforms.rs  readme.rs  vet.rs
nuclei-sdk/: BUILD.gn  README.md
nuclei-sdk/include/: nuclei_sdk.h
nuclei-sdk/src/: lib.rs  mod.c
registry/cache/index.crates.io-6f17d22bba15001f/: arm-gic-0.4.0.crate  cc-1.2.44.crate  const-default-1.0.0.crate  cortex-m-0.7.7.crate  cortex-m-rt-0.7.5.crate  cortex-m-rt-macros-0.7.5.crate  cortex-m-semihosting-0.5.0.crate  defmt-0.3.100.crate  defmt-1.0.1.crate  defmt-macros-1.0.1.crate  defmt-parser-1.0.0.crate  defmt-rtt-1.1.0.crate  defmt-test-0.4.0.crate  defmt-test-macros-0.3.2.crate  delegate-0.13.4.crate  embedded-hal-1.0.0.crate  find-msvc-tools-0.1.4.crate  flat_device_tree-3.1.1.crate  gd32e5-0.9.1.crate  goblin-0.9.3.crate  minicov-0.3.7.crate  phf_generator-0.12.1.crate  phf_macros-0.12.1.crate  quote-1.0.41.crate  safe-mmio-0.2.5.crate  scroll_derive-0.12.1.crate  semihosting-0.1.20.crate  smoltcp-0.12.0.crate  syn-2.0.108.crate  tock-registers-0.9.0.crate  virtio-drivers-0.11.0.crate  volatile-register-0.2.2.crate
registry/index/index.crates.io-6f17d22bba15001f/.cache/2/: cc  nb
registry/index/index.crates.io-6f17d22bba15001f/.cache/ar/m-/: arm-gic
registry/index/index.crates.io-6f17d22bba15001f/.cache/bi/tf/: bitfield  bitflags
registry/index/index.crates.io-6f17d22bba15001f/.cache/co/ns/: const-default
registry/index/index.crates.io-6f17d22bba15001f/.cache/co/rt/: cortex-m  cortex-m-rt  cortex-m-rt-macros  cortex-m-semihosting
registry/index/index.crates.io-6f17d22bba15001f/.cache/cr/it/: critical-section
registry/index/index.crates.io-6f17d22bba15001f/.cache/de/fm/: defmt  defmt-macros  defmt-parser  defmt-rtt  defmt-test  defmt-test-macros
registry/index/index.crates.io-6f17d22bba15001f/.cache/de/le/: delegate
registry/index/index.crates.io-6f17d22bba15001f/.cache/em/be/: embedded-hal  embedded-io
registry/index/index.crates.io-6f17d22bba15001f/.cache/fi/nd/: find-msvc-tools
registry/index/index.crates.io-6f17d22bba15001f/.cache/fl/at/: flat_device_tree
registry/index/index.crates.io-6f17d22bba15001f/.cache/gd/32/: gd32e5
registry/index/index.crates.io-6f17d22bba15001f/.cache/go/bl/: goblin
registry/index/index.crates.io-6f17d22bba15001f/.cache/ha/sh/: hash32
registry/index/index.crates.io-6f17d22bba15001f/.cache/he/ap/: heapless
registry/index/index.crates.io-6f17d22bba15001f/.cache/ma/na/: managed
registry/index/index.crates.io-6f17d22bba15001f/.cache/mi/ni/: minicov
registry/index/index.crates.io-6f17d22bba15001f/.cache/pr/oc/: proc-macro-error2
registry/index/index.crates.io-6f17d22bba15001f/.cache/sa/fe/: safe-mmio
registry/index/index.crates.io-6f17d22bba15001f/.cache/sc/ro/: scroll_derive
registry/index/index.crates.io-6f17d22bba15001f/.cache/se/mi/: semihosting
registry/index/index.crates.io-6f17d22bba15001f/.cache/se/mv/: semver-parser
registry/index/index.crates.io-6f17d22bba15001f/.cache/sm/ol/: smoltcp
registry/index/index.crates.io-6f17d22bba15001f/.cache/sp/in/: spin
registry/index/index.crates.io-6f17d22bba15001f/.cache/to/ck/: tock-registers
registry/index/index.crates.io-6f17d22bba15001f/.cache/vc/el/: vcell
registry/index/index.crates.io-6f17d22bba15001f/.cache/vi/rt/: virtio-drivers
registry/index/index.crates.io-6f17d22bba15001f/.cache/vo/id/: void
registry/index/index.crates.io-6f17d22bba15001f/.cache/vo/la/: volatile-register
registry/index/index.crates.io-6f17d22bba15001f/.cache/ze/ro/: zerocopy  zerocopy-derive
registry/src/index.crates.io-6f17d22bba15001f/arm-gic-0.4.0/: .cargo_vcs_info.json
registry/src/index.crates.io-6f17d22bba15001f/defmt-1.0.1/: .cargo_vcs_info.json
registry/src/index.crates.io-6f17d22bba15001f/defmt-macros-1.0.1/: .cargo_vcs_info.json
registry/src/index.crates.io-6f17d22bba15001f/defmt-test-0.4.0/: .cargo_vcs_info.json
registry/src/index.crates.io-6f17d22bba15001f/defmt-test-macros-0.3.2/: .cargo_vcs_info.json
registry/src/index.crates.io-6f17d22bba15001f/goblin-0.9.3/: .cargo_vcs_info.json
registry/src/index.crates.io-6f17d22bba15001f/phf_generator-0.12.1/: Cargo.toml
registry/src/index.crates.io-6f17d22bba15001f/phf_macros-0.12.1/: Cargo.toml
registry/src/index.crates.io-6f17d22bba15001f/semihosting-0.1.20/: .cargo_vcs_info.json  Cargo.toml
registry/src/index.crates.io-6f17d22bba15001f/virtio-drivers-0.11.0/: .cargo_vcs_info.json
rust-fatfs/v0.4/: BUILD.gn
rust-ftp/master/: BUILD.gn
src/: lib.rs
supply-chain/: config.toml
thiserror-2.0.17/: BUILD.gn  Cargo.toml
