[package]
name = "bluekernel_crates_io"
version = "0.1.0"
edition = "2021"

[dependencies]
arm-gic = "0.4.0"
bitflags = "2.9.0"
cfg-if = "1.0.0"
cortex-m = "0.7.7"
delegate = "0.13.3"
embedded-io = "0.6.1"
embedded-hal = "1.0.0"
flat_device_tree = "3.1.1"
heapless = "0.8.0"
log = "0.4.22"
memchr = "2.7.4"
minicov = "0.3.7"
paste = "1.0.15"
quote = "1.0.37"
spin = "0.9.8"
syn = "2.0.87"
safe-mmio = "0.2.5"
tock-registers = "0.9.0"
virtio-drivers = "0.11.0"
zerocopy = "0.8.25"
defmt-rtt = "1.0.0"
defmt-test = "0.4.0"

[dependencies.const-default]
version = "1.0.0"
default-features = false

[dependencies.proc-macro2]
version = "1.0.89"
features = ["default", "proc-macro"]

[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
    "_proto-fragmentation",
    "alloc",
    "async",
    "medium-ethernet",
    "medium-ieee802154",
    "medium-ip",
    "multicast",
    "packetmeta-id",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "proto-ipv4-fragmentation",
    "proto-ipv6",
    "proto-sixlowpan",
    "proto-sixlowpan-fragmentation",
    "socket",
    "socket-dhcpv4",
    "socket-dns",
    "socket-icmp",
    "socket-mdns",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
]

[dependencies.semihosting]
version = "0.1.20"
features = [
    "alloc",
    "fs",
    "stdio",
]

[dependencies.managed]
version = "0.8.0"
default-features = false
features = [
    "alloc",
    "map",
]

[dependencies.byteorder]
version = "1.5.0"
default-features = false

[patch.crates-io]
thiserror = { path = "./thiserror-2.0.17" } 

[dependencies.goblin]
version = "0.9.3"
default-features = false
features = [
    "alloc",
    "log",
    "archive",
    "elf32",
    "elf64",
    "endian_fd",
]

[dependencies.phf]
version = "0.12.1"
default-features = false
features = [
    "macros",
    "phf_macros",
]

[dependencies.gd32e5]
version = "0.9.1"
features = [
    "gd32e507",
]
